@@ -39,7 +39,7 @@
 .Op Fl e
 .Op Fl v
 .Op Fl l
-.Op Fl x
+.Op Fl b
 .Op Fl z
 .Op Fl Z
 .Op Fl d Ar depth
@@ -139,7 +139,7 @@ Verbose mode (may be specified more than once).
 .Bl -tag -width indent
 .It Fl l
 Follow symbolic links (default: do not follow).
-.It Fl x
+.It Fl b
 Do not cross filesystem boundaries (default: cross).
 .El
 .Sh DIRECTORY HANDLING
