@@ -1,7 +1,9 @@
 2013/??/??  0.7
     - Added option -D to group leaf directories as single file entries
-    - Options and doc update/cleanup
+    - Big options and doc update/cleanup
+    - Renamed option '-x' to '-b'
     - Sync'd fts(3) code with current FreeBSD version (svn rev 245505)
+    - Embedded fts(3) can now be used on GNU/Linux
 2013/01/21  0.6
     - Options handling cleanup and various bugfixes
     - Added FPART_PID and FPART_HOOKTYPE hook variables
